fix navbar toggle visibility

--- a/app/styles/elements/_header-navbar-toggle.scss
+++ b/app/styles/elements/_header-navbar-toggle.scss
@@ -8,6 +8,7 @@
   padding-left:15px;
   background:none;
   border:0 none;
+  font-size:12px;
   #{$state-hover-focus} {
     background:none !important;
   }
